# calisthenics

./: .gitignore  Cargo.toml  PROMPT.md  block-diagram.md  memory.x
.cargo/: config.toml
examples/: bench-check.arm  gripper-check.arm  invalid-shoulder.arm  keepalive.arm  motion-check.arm  operator-status-check.arm  operator-step-check.arm
logs/: gripper-check.jsonl  motion-check.jsonl
python/: arm_controller.py  arm_operator.py  arm_service.py  arm_teleop.py  test_arm_controller.py  test_arm_operator.py  test_arm_service.py  test_arm_teleop.py  test_support.py
src/: app.rs  arm_service.rs  arm_session.rs  byte_queue.rs  executor.rs  lib.rs  main.rs  protocol.rs  runtime.rs  servo_pwm.rs  servo_rail.rs  status.rs
tests/: app.rs  arm_session.rs  byte_queue.rs  executor.rs  protocol.rs  runtime.rs  safety_core.rs  servo_pwm.rs  servo_rail.rs  status.rs
tools/: flash-stm32f446re.sh
