[package]
name = "arm_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
panic-halt = { version = "1.0.0", optional = true }
stm32f4xx-hal = { version = "0.23.0", optional = true, features = ["stm32f446"] }

[features]
default = ["host"]
host = []
stm32f446re = ["dep:cortex-m", "dep:cortex-m-rt", "dep:panic-halt", "dep:stm32f4xx-hal"]

[[bin]]
name = "host"
path = "src/main.rs"
required-features = ["host"]

[[bin]]
name = "stm32f446re"
path = "src/bin/stm32f446re.rs"
required-features = ["stm32f446re"]

[[bin]]
name = "armctl"
path = "src/bin/armctl.rs"
required-features = ["host"]
